@@ -1,3 +1,6 @@
+2014/12/08:
+Menhir now requires OCaml 4.02 (instead of 3.09).
+
 2014/12/02:
 Removed support for the $previouserror keyword.
 Removed support for --error-recovery mode.
